#7004 - fix angular json editor alignment

--- a/packages/survey-creator-core/src/presets/presets-theme/presets.scss
+++ b/packages/survey-creator-core/src/presets/presets-theme/presets.scss
@@ -124,7 +124,7 @@
   display: flex;
   flex-direction: column;
 
-  .sps-question__content {
+  .sps-question__content, sv-ng-question-comment {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
